fixed pre align

--- a/trunk/css/rtl.css
+++ b/trunk/css/rtl.css
@@ -26,3 +26,9 @@ blockquote.tip, blockquote.info, blockquote.note
 	background-position: 99%;
 	padding:0em 55px 0em 1em;
 }
+
+pre 
+{
+	direction: ltr;
+	text-align: left;
+}
